enhancement of trendz

--- a/.projectConfig.json
+++ b/.projectConfig.json
@@ -1,1 +1,1 @@
-{"ignoredFilesOrFolders":[],"openFiles":["nxtTrendzCartFeatures/src/components/CartSummary/index.js"],"fileToBeOpened":"nxtTrendzCartFeatures/src/components/CartSummary/index.css"}
+{"ignoredFilesOrFolders":[],"openFiles":["nxtTrendzCartFeatures/src/components/CartSummary/index.js","nxtTrendzCartFeatures/src/components/Payment/index.css","nxtTrendzCartFeatures/src/components/Payment/index.js"],"fileToBeOpened":"nxtTrendzCartFeatures/src/components/CartSummary/index.css"}
